examples/regressions/217_filter.an
effect Emit a with
    emit: a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

// Removing the `can` here used to panic
filter (stream: Unit -> Unit) (f: a -> Bool pure) =
    handle 
        stream ()
    | emit x ->
        if f x then
            emit x
        resume ()

for (stream: Unit -> Unit can Emit a) (f: a -> Unit pure) =
    handle 
        stream ()
    | emit x ->
        f x
        resume ()

zero_to_nine () =
    iota 10

filtered () =
    filter zero_to_nine (fn x -> x % 2 == 0)

for filtered print

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/217_filter.an:1:1
// 1 | effect Emit a with	// error: This program has no `main` function
//   | 
// 2 |     emit: a -> Unit
// 
// examples/regressions/217_filter.an:2:13
// 1 | effect Emit a with
// 2 |     emit: a -> Unit	// error: Expected the end of this block but found `->`
//   |             ^^
// 
// examples/regressions/217_filter.an:6:9
// 5 |     if i < n then
// 6 |         emit i	// error: `emit` not found in scope
//   |         ^^^^
// 7 |         recur (i + 1)
// 
// examples/regressions/217_filter.an:10:8
//  9 | // Removing the `can` here used to panic
//    | // error: Expected `=` to begin the function body but found `(`
// 10 | filter (stream: Unit -> Unit) (f: a -> Bool pure) =
//    |        ^
// 11 |     handle 
// 
// examples/regressions/217_filter.an:18:1
//    | // error: Expected a top-level item but found `for`
// 18 | for (stream: Unit -> Unit can Emit a) (f: a -> Unit pure) =
//    | ^^^
// 19 |     handle 
// 
// examples/regressions/217_filter.an:29:5
// 28 | filtered () =
// 29 |     filter zero_to_nine (fn x -> x % 2 == 0)	// error: `filter` not found in scope
//    |     ^^^^^^
// 
// examples/regressions/217_filter.an:31:1
// 31 | for filtered print	// error: Expected a top-level item but found `for`
//    | ^^^
// 
// Found 7 errors and 0 warnings

